[tool.poetry]
name = "zapbot"
version = "0.1.0"
description = ""
authors = ["eliasandradep <eliasandradep@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.23.1"
chromedriver = "^2.24.1"
chromedriver-py = "^128.0.6613.84"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
